TestRepo2/src/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Total_Goal_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <picklist>
            <picklistValues>
                <fullName>Diageo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep (me)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <label>Training Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Bartender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Employees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Ad__c</fullName>
        <label>Type of Ad</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Universe__c</fullName>
        <description>Account Universe</description>
        <label>Universe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All_Actions</fullName>
        <columns>NAME</columns>
        <columns>Goal__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>State_Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Actions</label>
    </listViews>
    <listViews>
        <fullName>General_Actions</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Accomplishment_Recap__c</columns>
        <columns>Action_Reporting_Type__c</columns>
        <columns>Objective__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action__c.General</value>
        </filters>
        <label>General Actions</label>
        <sharedTo>
            <role>DiageoNorthAmerica</role>
            <role>Division_Sales_Director_East</role>
            <role>Division_Sales_Director_West</role>
            <role>Executive_Vice_President</role>
            <role>General_Manager_East</role>
            <role>General_Manager_West</role>
            <role>MarketingDirectors191001</role>
            <role>NASW_Division_Sales_Director_East</role>
            <role>NASW_Division_Sales_Director_West</role>
            <role>NASW_Sales_Analytics_Manager_East</role>
            <role>NASW_Sales_Analytics_Manager_West</role>
            <role>NASW_Sales_Manager_East</role>
            <role>NASW_Sales_Manager_West</role>
            <role>NASW_State_Director_East</role>
            <role>NASW_State_Director_West</role>
            <role>NASW_State_Vice_President_East</role>
            <role>NASW_State_Vice_President_West</role>
            <role>North_American_Wine_Spirits</role>
            <role>President</role>
            <role>Sales_Analytics_Manager_East</role>
            <role>Sales_Analytics_Manager_West</role>
            <role>Sales_Director_East</role>
            <role>Sales_Director_West</role>
            <role>Sales_Manager_East_CT</role>
            <role>Sales_Manager_West</role>
            <role>Senior_Vice_President_East</role>
            <role>Senior_Vice_President_West</role>
            <role>subposition</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Actions1</fullName>
        <columns>Account__c</columns>
        <columns>Goal__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Actions</label>
    </listViews>
    <nameField>
        <displayFormat>A-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Ad_Execution</fullName>
        <active>true</active>
        <label>Ad Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ad_Execution_Franchise</fullName>
        <active>true</active>
        <label>Ad Execution - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bar_Promotion_Control</fullName>
        <active>true</active>
        <label>Bar Promotion - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bar_Promotion_Franchise</fullName>
        <active>true</active>
        <label>Bar Promotion - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cold_Box_Control</fullName>
        <active>true</active>
        <label>Cold Box - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cold_Box_Franchise</fullName>
        <active>true</active>
        <label>Cold Box - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display</fullName>
        <active>true</active>
        <label>Display - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display_Control</fullName>
        <active>true</active>
        <label>Display - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Accts_Sold_Control</fullName>
        <active>true</active>
        <label>Distribution (Accts Sold) - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Accts_Sold_Franchise</fullName>
        <active>true</active>
        <label>Distribution (Accts Sold) - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_POD_Control</fullName>
        <active>true</active>
        <label>Distribution (POD) - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_POD_Franchise</fullName>
        <active>true</active>
        <label>Distribution (POD) - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop</fullName>
        <active>true</active>
        <label>Ease of Shop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop_Control</fullName>
        <active>true</active>
        <label>Ease of Shop - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop_Franchise</fullName>
        <active>true</active>
        <label>Ease of Shop - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature_Execution</fullName>
        <active>true</active>
        <label>Feature Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature_Execution_Franchise</fullName>
        <active>true</active>
        <label>Feature Execution - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Control</fullName>
        <active>true</active>
        <label>General - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Execution</fullName>
        <active>true</active>
        <label>Menu Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Execution_Franchise</fullName>
        <active>true</active>
        <label>Menu Execution - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Set</fullName>
        <active>true</active>
        <label>Shelf Set - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Set_Franchise</fullName>
        <active>true</active>
        <label>Shelf Set - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Training</fullName>
        <active>true</active>
        <label>Staff Training - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tasting_Control</fullName>
        <active>true</active>
        <label>Tasting - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tasting_Franchise</fullName>
        <active>true</active>
        <label>Tastings - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tastings_Control</fullName>
        <active>true</active>
        <label>Tastings - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Staff Training - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volume_QD_Control</fullName>
        <active>true</active>
        <label>Volume/QD - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volume_QD_Franchise</fullName>
        <active>true</active>
        <label>Volume/QD - Franchise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Window_Display</fullName>
        <active>true</active>
        <label>Window Display - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Window_Display_Franchise</fullName>
        <active>true</active>
        <label>Window Display - Franchise</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Accomplishment_Recap_is_Mandatory</fullName>
        <active>true</active>
        <description>Accomplishment recap is mandatory to save an Ease of Shop Activity Type</description>
        <errorConditionFormula>AND(
          NOT( ISNEW() ), 
          ISBLANK( Accomplishment_Recap__c ), 
          CONTAINS( $RecordType.Name, &quot;Ease of Shop&quot; )
          )</errorConditionFormula>
        <errorDisplayField>Accomplishment_Recap__c</errorDisplayField>
        <errorMessage>Accomplishment recap is mandatory to save an Ease of Shop Activity Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Action_ID_is_Uneditable</fullName>
        <active>true</active>
        <description>Disallows a user to change the Action ID field on the Page Layout.</description>
        <errorConditionFormula>AND(
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;Control - SAM&apos;,
OR(
ISCHANGED(Name)
))</errorConditionFormula>
        <errorMessage>The related Action cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Action_cannot_close_without_brand</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;System Administrator&apos;, TEXT(Status__c) = &apos;Closed - Complete&apos;, Product_Link_Count__c = 0)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Actions cannot be marked Closed - Complete without having at least one Action Brand.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Action_is_uneditable</fullName>
        <active>true</active>
        <description>Disallows a user to edit the fields on an action (except comments) if that action&apos;s due date was more than 5 days ago.</description>
        <errorConditionFormula>AND(Due_Date__c &lt;= TODAY() - 7,
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;Control - SAM&apos;,
OR(
ISCHANGED(OwnerId),
ISCHANGED(RecordTypeId),
ISCHANGED(Account__c),
ISCHANGED(Cases_Displayed__c),
ISCHANGED(Date_Finished__c),
ISCHANGED(Date_Started__c),
ISCHANGED(Due_Date__c),
ISCHANGED(Gold_Standard_Met__c),
ISCHANGED(Location_Grade__c),
ISCHANGED(Marketing_Material__c),
ISCHANGED(Objective__c),
ISCHANGED(POS_Items_SFA__c),
ISCHANGED(Status__c),
ISCHANGED(Suggested_Display_Price__c),
ISCHANGED(Suggested_Price__c),
ISCHANGED(Number_of_Attendees__c),
ISCHANGED(Tasted_Product__c),
ISCHANGED(Brand_Category__c),
ISCHANGED(Feature_Type__c),
ISCHANGED(Goal__c),
ISCHANGED(Length_of_Training__c),
ISCHANGED(Product_Sample_s__c),
ISCHANGED(Size_of_Ad__c),
ISCHANGED(Trainer__c),
ISCHANGED(Training_Audience__c),
ISCHANGED(Type_of_Ad__c),
ISCHANGED(State__c)
))</errorConditionFormula>
        <errorMessage>This Action&apos;s due date was more than 5 days ago, so its fields can no longer be edited (except Comments).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Type_is_Uneditable</fullName>
        <active>true</active>
        <description>Disallows a user to change the Record Type field on the Page Layout.</description>
        <errorConditionFormula>AND(
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;Control - SAM&apos;,
OR(
ISCHANGED(RecordTypeId)
))</errorConditionFormula>
        <errorMessage>The Record Type on this action cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>